[resources] :bug: Fix color flickering when disabling buttons due to md-motions interfering with surfaces animations

--- a/modules/resources/src/main/resources/io/github/palexdev/mfxresources/sass/abstracts/_utils.scss
+++ b/modules/resources/src/main/resources/io/github/palexdev/mfxresources/sass/abstracts/_utils.scss
@@ -12,3 +12,7 @@
 
   @return null;
 }
+
+@function null() {
+  @return string.unquote('null');
+}
